Commit working game code.